@startuml
'https://plantuml.com/class-diagram

abstract class AbstractPropFactory {
    # speedX:int
    # speedY:int
    + {abstract} creatProp(AbstractAircraft enemyAircraft):AbstractProp
}

class BloodSupplyFactory {
    + creatProp(AbstractAircraft enemyAircraft):AbstractProp
}

class FireSupplyFactory {
    + creatProp(AbstractAircraft enemyAircraft):AbstractProp
}

class BombSupplyFactory {
    + creatProp(AbstractAircraft enemyAircraft):AbstractProp
}

abstract class GameTemplate {
}

abstract class AbstractFlyingObject
{
    # locationX:int
    # locationY:int
    # speedX:int
    # speedY:int
    # image:BufferedImage
    # width:int
    # height:int
    # isValid:boolean

    + AbstractFlyingObject(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + crash(AbstractFlyingObject flyingObject):boolean
    + setLocation(double locationX, double locationY):void
    + getLocationX():int
    + getLocationY():int
    + getSpeedY():int
    + getImage():BufferedImage
    + getWidth():int
    + getHeight():int
    + notValid():boolean
    + vanish():void
}

abstract class AbstractProp
{
    + AbstractProp(int locationX, int locationY, int speedX, int speedY)
    + forward():void
}

class BloodSupplyProp {
    - hp:int
    + BloodSupplyProp(int locationX, int locationY, int speedX, int speedY)
    + increaseHp(HeroAircraft heroAircraft):void
}

class FireSupplyProp {
    - propStrategy:PropStrategy
    + FireSupplyProp(int locationX, int locationY, int speedX, int speedY)
    + setPropStrategy(PropStrategy propStrategy):void
    + executeStrategy(HeroAircraft heroAircraft):void
}

class BombSupplyProp {
    - objects:List<AbstractFlyingObject flyingObject>
    + BombSupplyProp(int locationX, int locationY, int speedX, int speedY)
    + addEnemy(AbstractFlyingObject object):void
    + notifyAllEnemy():void
    + executeBombSupply():void
}

AbstractFlyingObject <|-- AbstractProp

AbstractProp <|-- BloodSupplyProp
AbstractProp <|-- FireSupplyProp
AbstractProp <|-- BombSupplyProp

AbstractPropFactory <|-- BloodSupplyFactory
AbstractPropFactory <|-- FireSupplyFactory
AbstractPropFactory <|-- BombSupplyFactory

GameTemplate ..> AbstractPropFactory
GameTemplate ..> AbstractProp

BloodSupplyFactory ..> BloodSupplyProp
FireSupplyFactory ..> FireSupplyProp
BombSupplyFactory ..> BombSupplyProp

@enduml